// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm render snapshots 📸 Login should match snap shot 1`] = `
<div>
  <div
    className="login__form"
  >
    <div
      className="hidden__div"
    />
    <img
      alt="character logo"
      className="character__icon__image"
      src="./billSnapIcon.png"
    />
    <form
      className=""
    >
      <div
        className="form__inputs"
      >
        <div
          className="form-group"
          onChange={[MockFunction]}
        >
          <input
            autoComplete="username"
            className="register__login__inputs form-control"
            id="email"
            name="email"
            placeholder="@ Enter your email"
            type="email"
          />
        </div>
        <div
          className="form-group"
          onChange={[MockFunction]}
        >
          <input
            autoComplete="new-password"
            className="register__login__inputs form-control"
            id="password"
            name="password"
            placeholder="🔒 Enter a password"
            type="password"
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <a
          className="forgot__password"
          href="/#"
        >
           Forgot Password? 
        </a>
        <button
          className="login_register__submit__button btn btn-primary btn-sm btn-pill"
          name="submit"
          onClick={[Function]}
          type="button"
        >
          Log in
        </button>
      </div>
    </form>
  </div>
  <div>
    <div
      className="form__seperator"
    >
      <hr
        className="form__horizontal__line"
      />
      Or
      <hr
        className="form__horizontal__line"
      />
    </div>
    <div>
      <h6>
        New to Billsnap?
      </h6>
      <button
        className="form__toggle btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        👋 Create account.
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginForm render snapshots 📸 LoginContainer should match snap shot 1`] = `
<div
  className="login__container"
>
  <div>
    <div
      className="login__form"
    >
      <div
        className="hidden__div"
      />
      <img
        alt="character logo"
        className="character__icon__image"
        src="./billSnapIcon.png"
      />
      <form
        className=""
      >
        <div
          className="form__inputs"
        >
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              autoComplete="username"
              className="register__login__inputs form-control"
              id="email"
              name="email"
              placeholder="@ Enter your email"
              type="email"
            />
          </div>
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              autoComplete="new-password"
              className="register__login__inputs form-control"
              id="password"
              name="password"
              placeholder="🔒 Enter a password"
              type="password"
            />
          </div>
        </div>
        <div
          className="form-group"
        >
          <a
            className="forgot__password"
            href="/#"
          >
             Forgot Password? 
          </a>
          <button
            className="login_register__submit__button btn btn-primary btn-sm btn-pill"
            name="submit"
            onClick={[Function]}
            type="button"
          >
            Log in
          </button>
        </div>
      </form>
    </div>
    <div>
      <div
        className="form__seperator"
      >
        <hr
          className="form__horizontal__line"
        />
        Or
        <hr
          className="form__horizontal__line"
        />
      </div>
      <div>
        <h6>
          New to Billsnap?
        </h6>
        <button
          className="form__toggle btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          👋 Create account.
        </button>
      </div>
    </div>
  </div>
</div>
`;
